--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <link rel="icon" href="/assets/images/code-box-fill.png">
+    <link rel="icon" href="/assets/images/code-box-fill.svg">
     <title>Portfolio</title>
   </head>
   <body>
